Fix css on safari ios (https://github.com/Wolox/react-chat-widget/pull/22#discussion_r168513303)

--- a/src/components/Widget/style.scss
+++ b/src/components/Widget/style.scss
@@ -2,6 +2,7 @@
 @import "common.scss";
 
 .widget-container {
+  max-height:100%;
   bottom: 0;
   display: flex;
   flex-direction: column;
